--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet" />
+
     <link rel="stylesheet" href="./css/style.css" />
     <title>Portfolio</title>
   </head>
@@ -51,7 +55,19 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="banner">
+        <div class="container banner__container">
+          <h2 class="banner__heading">
+            Hi &#128075;,<br />
+            My name is<br />
+            <span class="banner__gradient">Pavan MG</span><br />
+            I build things for web
+          </h2>
+          <img class="banner__img" src="./img/503536831.png" alt="photo" />
+        </div>
+      </section>
+    </main>
     <script src="./js/index.js"></script>
   </body>
 </html>
