feat: add stack

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
           <img class="banner__img" src="./img/503536831.png" alt="photo" />
         </div>
       </section>
+      <section class="stack">
+        <div class="container stack__container">
+          <h2 class="stack__heading">My Tech Stack</h2>
+          <p class="stack__subheading">
+            Technologies I’ve been working with recently
+          </p>
+          <ul class="stack__list"></ul>
+        </div>
+      </section>
     </main>
     <script src="./js/index.js"></script>
   </body>
