feat: add projects

--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
           <ul class="stack__list"></ul>
         </div>
       </section>
+      <section class="projects">
+        <div class="container projects__container">
+          <h2 class="projects__heading">Projects</h2>
+          <p class="projects__subheading">Things I’ve built so far</p>
+          <ul class="projects__list"></ul>
+        </div>
+      </section>
     </main>
     <script src="./js/index.js"></script>
   </body>
