fix: fix validation errors

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           ><img class="menu__logo" src="./img/logo.svg" alt="logo"
         /></a>
         <div class="menu">
-          <input id="menu__toggle" type="checkbox" />
+          <input id="menu__toggle" class="visually-hidden" type="checkbox" />
           <label class="menu__btn" for="menu__toggle">
             <span></span>
           </label>
@@ -78,7 +78,7 @@
                           fill="#666666" />
                       </g>
                       <defs>
-                        <clipPath id="clip0_8_50">
+                        <clipPath id="clip0_8_50-1">
                           <rect width="30" height="30" fill="white" />
                         </clipPath>
                       </defs>
@@ -121,6 +121,7 @@
       </section>
       <section class="contact">
         <div class="container contact__container">
+          <h2 class="visually-hidden">Contacts</h2>
           <img
             class="contact__logo"
             width="97"
